Fix code spacing and links

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -12,7 +12,7 @@ header {
   display: flex;
   align-items: center;
   gap: 0.1rem;
-  max-width: 82rem;
+  max-width: 86rem;
 }
 
 .header-home-link {
