--- a/assets/scss/highlight.scss
+++ b/assets/scss/highlight.scss
@@ -1,10 +1,9 @@
 .highlight {
-  max-width: auto;
+  display: grid;
 }
 
 .highlight pre {
   padding: 0.5rem;
-  padding: 1rem;
   overflow: auto;
   border: 1px solid $gray6;
   border-radius: 8px;
