--- a/assets/scss/sidebar.scss
+++ b/assets/scss/sidebar.scss
@@ -8,7 +8,7 @@ aside {
 .sidebar-content {
   display: flex;
   flex-direction: column;
-  width: 11rem;
+  width: 14rem;
 }
 
 .sidebar-content nav {
